# GORi

./: .gitignore  PKG-INFO  README.md  app.py  data_preparation.py  download_files.py  graph_rules.py  itemset_mining.py  mine_itemsets.py  pyproject.toml  settings.py  setup.py  test.py  truc.txt
_scripts/: Histogram_analysis.py  analysis.py  common.py  fptree.py  graph_rules.py  histogramme.py  hpo.py  misc.py  network.py  ontology.py  reactome.py  stat_couleur.py  uniprot.py  wofptree.py
assets/: app.css
data/: .gitignore  Darmanis_HumGBM.xlsx  GORi.xlsx
docs/: display.ipynb  gori.ipynb  references.bib
gori/: analysis.py  get_parameters.py  gori.py  gorilon.py  init.py  loaders.py  metrics.py  params.py  run.py  setup.py  utils.py  wrappers.py
gori/etc/: lemmas.py
gori/mining/: get_annotations.py  get_associations.py
gori/priors/: download_priors.py  load_custom.py  load_feve.py  load_priors.py  setup_priors.py
gori/src/: annotations.py  associations.py  lemmas.py  notebook.py  utils.py  words.py
gori/src/analysis/: _get_annotations.py  _get_associations.py
gori/src/loaders/: load_priors.py
gori/src/setup/: download_priors.py  setup_priors.py
gori/src/wrappers/: _ancestors_wrapper.py  _annotations_wrapper.py  _descendants_wrapper.py  _download_wrapper.py  _inverse_translate_wrapper.py  _load_wrapper.py  _roots_wrapper.py  _setup_wrapper.py  _terms_wrapper.py  _translate_wrapper.py  _urls_wrapper.py
misc/: IIC.csv  LIIC.csv
results/: .gitignore
scripts/: common.py  hpo.py  reactome.py  wofptree.py
