# pyproject.toml
[build-system]
requires = ["setuptools >= 42.0.0", "itables>=2.2.4", "mlxtend>=0.23.1", "networkx>=3.2", "nxontology>=0.5.0", "pandas>=1.4.4", "pipreqs>=0.5.0", "plotly>=5.19.0", "pypath>=0.1", "pypath_common>=0.2.5", "pypath-omnipath>=0.16.17", "scipy>=1.9.1", "setuptools>=69.2.0", "statsmodels>=0.13.2"]
build-backend = "setuptools.build_meta"