[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[package]
name = "gori"
version = "0.1"
description = "Context-informed genesets annotations. GORi is an algorithm to annotate related genesets, with any knowledge base."
author = "Yanis Asloudj"
author-email = "yasloudj@u-bordeaux.fr"
url = "https://github.com/yanisaspic/GORi"
keywords = [
    "geneset annotation",
    "frequent itemset mining",
    "multi-scale multi-resolution",
    "semantic enrichment",
    "single-cell",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "itables>=2.2.4",
    "mlxtend>=0.23.1",
    "networkx>=3.2",
    "nltk>=3.9.1",
    "notebook>=7.4.3",
    "nxontology>=0.5.0",
    "pandas>=1.4.4",
    "pipreqs>=0.5.0",
    "plotly>=5.19.0",
    "pypath>=0.1",
    "pypath_common>=0.2.5",
    "pypath-omnipath>=0.16.17",
    "scipy>=1.9.1",
    "statsmodels>=0.13.2"
]